--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "starwars-names-corncandy",
   "version": "0.0.0-sematically-released",
   "description": "Get random Star Wars names",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "commit": "git-cz",
-    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "test": "mocha src/index.test.js -w",
-    "test:single": "istanbul cover -x *.test.js _mocha -- -R spec  src/index.test.js",
+    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "prebuild": "rimraf dist",
+    "watch:test": "npm t -- -w",
+    "test": "mocha src/index.test.js --compilers js:babel-register",
+    "cover": "nyc npm t",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -20,6 +23,10 @@
     "star",
     "wars"
   ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "author": "Cloud Mu <muyunsong@gmail.com> (http://muyunsong.com/)",
   "license": "MIT",
   "bugs": {
@@ -30,13 +37,17 @@
     "unique-random-array": "1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "6.16.0",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-stage-2": "6.17.0",
     "chai": "3.5.0",
     "codecov.io": "0.1.6",
     "commitizen": "2.8.6",
     "cz-conventional-changelog": "1.2.0",
     "ghooks": "1.3.2",
-    "istanbul": "0.4.5",
     "mocha": "3.1.2",
+    "nyc": "8.3.1",
+    "rimraf": "2.5.4",
     "semantic-release": "^4.3.5"
   },
   "config": {
@@ -44,7 +55,13 @@
       "path": "node_modules/cz-conventional-changelog"
     },
     "ghooks": {
-      "pre-commit": "npm run test:single && npm run check-coverage"
+      "pre-commit": "npm run cover && npm run check-coverage"
     }
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2"
+    ]
   }
 }
