--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "commit": "git-cz",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
-    "build": "babel --copy-files --out-dir dist --ignore *.test.js src",
     "prebuild": "rimraf dist",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "watch:test": "npm t -- -w",
     "test": "mocha src/index.test.js --compilers js:babel-register",
     "cover": "nyc npm t",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.16.0",
+    "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-stage-2": "6.17.0",
     "chai": "3.5.0",
@@ -45,10 +49,13 @@
     "commitizen": "2.8.6",
     "cz-conventional-changelog": "1.2.0",
     "ghooks": "1.3.2",
+    "json-loader": "0.5.4",
     "mocha": "3.1.2",
+    "npm-run-all": "3.1.0",
     "nyc": "8.3.1",
     "rimraf": "2.5.4",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "webpack": "1.13.2"
   },
   "config": {
     "commitizen": {
